Mod API 1.2.1: Ported to Java 8